--- a/data/index.html
+++ b/data/index.html
@@ -1,242 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WiFi Deauth Controller</title>
+  <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <style>
-    /* General Styles */
-    body {
-      font-family: 'Roboto', Arial, sans-serif;
-      background-color: #1e1e2f;
-      color: #ffffff;
-      text-align: center;
-      padding: 20px;
-      margin: 0;
-      box-sizing: border-box;
+    .content {
+      max-width: 500px;
+      margin: auto;
     }
-
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
-      color: #f39c12;
-    }
-
-    .btn {
-      background-color: #3498db;
-      border: none;
-      color: white;
-      padding: 15px 25px;
-      margin: 10px;
-      font-size: 18px;
-      cursor: pointer;
-      border-radius: 8px;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-    }
-
-    .btn:hover {
-      background-color: #2980b9;
-      transform: scale(1.05);
-    }
-
-    .btn-danger {
-      background-color: #e74c3c;
-    }
-
-    .btn-danger:hover {
-      background-color: #c0392b;
-    }
-
-    #networks {
-      margin-top: 20px;
-      text-align: left;
-      display: inline-block;
-      width: 100%;
-      max-width: 600px;
-      background-color: #2c2c3e;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    }
-
-    .network-item {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 0;
-      border-bottom: 1px solid #444;
-    }
-
-    .network-item:last-child {
-      border-bottom: none;
-    }
-
-    .network-name {
-      font-size: 1.2em;
-      font-weight: bold;
-    }
-
-    .dropdown {
-      width: 100%;
-      max-width: 300px;
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      background-color: #fff;
-      color: #000;
-      margin: 20px auto;
-    }
-
-    .status {
-      margin-top: 20px;
-      font-size: 1.2em;
-      font-weight: bold;
-      color: #27ae60;
-    }
-
-    .status.error {
-      color: #e74c3c;
-    }
-
-    /* Responsive Styles */
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 2em;
-      }
-
-      .btn {
-        padding: 12px 20px;
-        font-size: 16px;
-      }
-
-      .network-name {
-        font-size: 1em;
-      }
-
-      #networks {
-        padding: 15px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.8em;
-      }
-
-      .btn {
-        padding: 10px 15px;
-        font-size: 14px;
-      }
-
-      .network-item {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .network-name {
-        font-size: 0.9em;
-        margin-bottom: 8px;
-      }
+    table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      padding-left: 10px;
+      padding-right: 10px;
     }
   </style>
 </head>
 <body>
-  <h1>WiFi Deauth Controller</h1>
-
-  <button class="btn" onclick="scanNetworks()">Scan Networks</button>
-  <div id="networks"></div>
-
-  <select id="networkSelector" class="dropdown">
-    <option value="" disabled selected>Select Network</option>
-  </select>
-
-  <button class="btn" onclick="startAttack()">Start Attack</button>
-  <button class="btn btn-danger" onclick="stopAttack()">Stop Attack</button>
-
-  <div id="status" class="status"></div>
-
-  <script>
-    function scanNetworks() {
-      const status = document.getElementById('status');
-      const networkSelector = document.getElementById('networkSelector');
-      const networksDiv = document.getElementById('networks');
-
-      status.textContent = 'Scanning for networks...';
-      status.className = 'status';
-
-      fetch('/scan')
-        .then(response => response.text())
-        .then(data => {
-          const networks = data.split('\n').filter(name => name.trim() !== ''); // Parse networks
-          networkSelector.innerHTML = '<option value="" disabled selected>Select Network</option>';
-          networksDiv.innerHTML = '';
-
-          networks.forEach(network => {
-            // Add to dropdown
-            const option = document.createElement('option');
-            option.value = network;
-            option.textContent = network;
-            networkSelector.appendChild(option);
-
-            // Add to networks list
-            const networkItem = document.createElement('div');
-            networkItem.className = 'network-item';
-            networkItem.innerHTML = `
-              <span class="network-name">${network}</span>
-              <button class="btn" onclick="startAttack('${network}')">Attack</button>
-            `;
-            networksDiv.appendChild(networkItem);
-          });
-
-          status.textContent = 'Scan complete!';
-        })
-        .catch(error => {
-          console.error('Error scanning networks:', error);
-          status.textContent = 'Error scanning networks!';
-          status.className = 'status error';
-        });
-    }
-
-    function startAttack(ssid = null) {
-      if (!ssid) {
-        const networkSelector = document.getElementById('networkSelector');
-        ssid = networkSelector.value;
-      }
-
-      if (!ssid) {
-        alert('Please select a network to attack!');
-        return;
-      }
-
-      fetch('/start?ssid=' + encodeURIComponent(ssid))
-        .then(() => {
-          const status = document.getElementById('status');
-          status.textContent = `Attack started on ${ssid}`;
-          status.className = 'status';
-        })
-        .catch(error => {
-          console.error('Error starting attack:', error);
-          const status = document.getElementById('status');
-          status.textContent = 'Error starting attack!';
-          status.className = 'status error';
-        });
-    }
-
-    function stopAttack() {
-      fetch('/stop')
-        .then(() => {
-          const status = document.getElementById('status');
-          status.textContent = 'Attack stopped.';
-          status.className = 'status';
-        })
-        .catch(error => {
-          console.error('Error stopping attack:', error);
-          const status = document.getElementById('status');
-          status.textContent = 'Error stopping attack!';
-          status.className = 'status error';
-        });
-    }
-  </script>
+  <div class="content">
+    <div>
+      <form style="display: inline-block;" method="post" action="/?deauth={deauth}">
+        <button style="display: inline-block;" {disabled}>{deauth_button}</button>
+      </form>
+      <form style="display: inline-block; padding-left: 8px;" method="post" action="/?hotspot={hotspot}">
+        <button style="display: inline-block;" {disabled}>{hotspot_button}</button>
+      </form>
+    </div>
+    </br>
+    <table>
+      <tr>
+        <th>SSID</th>
+        <th>BSSID</th>
+        <th>Channel</th>
+        <th>Select</th>
+      </tr>
+      <!-- Dynamic rows will be appended here by the C++ code -->
+    </table>
+    <!-- Success message -->
+    {success_message}
+  </div>
 </body>
 </html>
